Fix chart header layout alignment

--- a/style.scss
+++ b/style.scss
@@ -1534,9 +1534,23 @@ main {
   gap: 20px;
   margin-bottom: 18px;
 
+  > div:first-child {
+    flex: 1 1 0;
+    min-width: 0;
+  }
+
+  > .bench-chart-toolbar {
+    flex: 0 0 auto;
+  }
+
   @include mobile {
     flex-direction: column;
     align-items: flex-start;
+
+    > div:first-child,
+    > .bench-chart-toolbar {
+      width: 100%;
+    }
 
     h2 {
       margin-left: 0;
